Tests for API Routes (WIP)
