# cmd/api/docs/swagger.json
@@ -213,7 +213,7 @@
         },
         "/v1/event_dates": {
             "get": {
-                "description": "Get a list of ISO dates (e.g. yyyy-mm-dd) for which events exist.",
+                "description": "Get a paginated list of ISO dates (e.g. yyyy-mm-dd) for which events exist.",
                 "produces": [
                     "application/json"
                 ],
@@ -258,6 +258,12 @@
                             }
                         }
                     },
+                    "400": {
+                        "description": "Bad Request (invalid pagination parameter)",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIEvent"
+                        }
+                    },
                     "401": {
                         "description": "Unauthenticated (missing or invalid Authorization header)",
                         "schema": {
@@ -281,7 +287,7 @@
         },
         "/v1/event_entity_ids": {
             "get": {
-                "description": "Get a list of entity IDs for which events exist.",
+                "description": "Get a paginated list of entity IDs for which events exist.",
                 "produces": [
                     "application/json"
                 ],
@@ -326,6 +332,12 @@
                             }
                         }
                     },
+                    "400": {
+                        "description": "Bad Request (invalid pagination parameter)",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIEvent"
+                        }
+                    },
                     "401": {
                         "description": "Unauthenticated (missing or invalid Authorization header)",
                         "schema": {
@@ -349,7 +361,7 @@
         },
         "/v1/event_entity_types": {
             "get": {
-                "description": "Get a list of entity types for which events exist.",
+                "description": "Get a complete, sorted list of entity types for which events exist.",
                 "produces": [
                     "application/json"
                 ],
@@ -399,7 +411,7 @@
         },
         "/v1/event_log_levels": {
             "get": {
-                "description": "Get a list of log levels for which events exist.",
+                "description": "Get a complete, sorted list of log levels for which events exist.",
                 "produces": [
                     "application/json"
                 ],
